# cpp-benchmark

convolution/: CMakeLists.txt
convolution/include/: convolution.h  fft.h  math_functions.h
convolution/python/: convolution.py
convolution/scripts/: scan_fft.py
convolution/src/: convolution1.cpp  convolution2.cpp  convolution3.cpp  convolution4.cpp  convolution5.cpp
drift/: CMakeLists.txt
drift/include/blond/: openmp.h  utilities.h
drift/python/: vectorMath1.py  vectorMath2.py  vectorMath3.py  vectorMath4.py
drift/scripts/: extract-throughput.py  plot_columns.py  plot_columns_bar.py  scan_fft.py
drift/src/: drift1.cpp  drift2.cpp  drift3.cpp
fast_resonator/include/: rng64.h  utilities.h
fast_resonator/include/blond/: configuration.h  exp.h
fast_resonator/scripts/: extract-throughput.py  group_by.py  scan_local.py
fast_resonator/src/: rng64.cpp
fast_resonator/tests/: fastRes1.cpp  fastRes2.cpp  fastRes3.cpp
histo/include/: math_functions.h
histo/include/blond/: optionparser.h  sin.h  vector_math.h
histo/scripts/: evaluate_randomness.py  result2.csv  scan_local.py  strong_scalability.py
histo/tests/: histo1.cpp  histo2.cpp  smooth_histo1.cpp  smooth_histo2.cpp  smooth_histo3.cpp  smooth_histo4.cpp  smooth_histo5.cpp  smooth_histo6.cpp
kickNdrift/: CMakeLists.txt
kickNdrift/include/blond/: globals.h  math_functions.h  python.h
kickNdrift/scripts/: scan_fft_python.py
kickNdrift/src/: drift1.cpp  drift2.cpp  kick1.cpp  kick2.cpp  kick3.cpp
random_generators/: CMakeLists.txt
random_generators/include/blond/: constants.h  fft.h  openmp.h  sincos.h  vdtcore_common.h
random_generators/other/: bounds.cpp
random_generators/python/: histogram.py
random_generators/scripts/: extract-throughput.py  plot_columns.py  result1.csv  scan_generators.py  scan_local.py  strong_scalability.py
random_generators/tests/: README.txt  boost_random.cpp  gauss_from_rand.cpp  gauss_from_rng.cpp  randomtest_synch_rad1.cpp  randomtest_synch_rad2.cpp  randomtest_synch_rad4.cpp  randomtest_synch_rad6.cpp  rng64-bench.cpp  std_normal_distribution.cpp  synch_rad1.cpp  synch_rad2.cpp  synch_rad3.cpp  synch_rad4.cpp  synch_rad45.cpp  synch_rad5.cpp  synch_rad6.cpp  synch_rad7.cpp  synch_rad8.cpp  synch_rad9.cpp
rfft/: CMakeLists.txt
rfft/include/: configuration.h  fft.h  math_functions.h  utilities.h
rfft/python/: fft-bench.py  ifft-bench.py  irfft-bench.py  rfft-bench.py
rfft/scripts/: extract-throughput.py  fft-v1.csv  fft-v2.csv  fft-v3.csv  group_by.py  plot_columns.py  scan_fft.py
rfft/src/: fft-bench.cpp  ifft-bench.cpp  irfft-bench.cpp  rfft-bench.cpp
rfft/unit-tests/: testMyMath.cpp
rfft/unit-tests/references/MyMath/CumTrap/: cumtrap_reference.txt
rfft/unit-tests/references/MyMath/convolution/: convolution1.txt  convolution2.txt  convolution3.txt
rfft/unit-tests/references/MyMath/fft/: inverse_rfft.txt  rfft1_imag.txt  rfft1_real.txt  rfft2_imag.txt  rfft2_real.txt
rfft/unit-tests/references/MyMath/fft/irfft/: irfft1.txt  irfft2.txt
sin-war/: Makefile  fastSinCos.h  generate_sin_lut.py  sin-LUT.cpp  sin-war.cpp
